<resources>
    <string name="app_name">QuicPos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Post</string>

    <string name="title_activity_creator">Creator</string>
    <string name="next_post_button">Next post button</string>
    <string name="prev_post_button">prev_post_button</string>
    <string name="saved_button">saved_button</string>

    <string name="post_user">User @</string>
    <string name="default_post_user">User @0</string>
    <string name="post_ad_user">Promoted @</string>
    <string name="post_text">Loading...</string>
    <string name="post_stats">0 views 0 shares</string>
    <string name="post_date">2020-12-04 18:30</string>

    <string name="post_image">Post image</string>
    <string name="share_button">Share</string>
    <string name="report_button">Report</string>
    <string name="create_hint">Type text...</string>
    <string name="create_post">Create post</string>
    <string name="select_image">creator select image button</string>
    <string name="creator_send">creator send button</string>

    <string name="saved_userid">com.example.quicpos.user</string>
    <string name="myposts">com.example.quicpos.myposts</string>
    <string name="initalert">com.example.quicpos.initalert</string>
    <string name="stats">Stats</string>
    <string name="delete">Delete</string>
    <string name="post">Post</string>
    <string name="block">Block</string>
</resources>